# advent_of_code

./: .gitignore  LICENSE  Manifest.toml  Project.toml  README.md  environment.yml  setup.cfg  update_readmes.py
2016/aoc2016/: LICENSE  pyproject.toml
2016/aoc2016/aoc2016/: __init__.py  assembunny.py
2019/aoc2019/: LICENSE  README.md  pyproject.toml
2019/aoc2019/aoc2019/: intcode_computer.py
python/: README.md  conftest.py  pyproject.old.toml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  test_all_puzzles.py
python/2015/: README.md
python/2015/01_not_quite_lisp/: README.md  aoc201501.py  example2.txt  test_aoc201501.py
python/2015/02_i_was_told_there_would_be_no_math/: README.md  aoc201502.py  test_aoc201502.py
python/2015/03_perfectly_spherical_houses_in_a_vacuum/: README.md  aoc201503.py  test_aoc201503.py
python/2015/04_the_ideal_stocking_stuffer/: README.md  aoc201504.py  test_aoc201504.py
python/2015/05_doesnt_he_have_intern-elves_for_this/: README.md  aoc201505.py  test_aoc201505.py
python/2015/06_probably_a_fire_hazard/: README.md  aoc201506.py  example2.txt  test_aoc201506.py
python/2015/07_some_assembly_required/: README.md  aoc201507.py  test_aoc201507.py
python/2015/08_matchsticks/: README.md  aoc201508.py  test_aoc201508.py
python/2015/09_all_in_a_single_night/: README.md  aoc201509.py  test_aoc201509.py
python/2015/10_elves_look_elves_say/: README.md  aoc201510_iter.py  aoc201510_string.py  test_aoc201510.py
python/2015/11_corporate_policy/: README.md  aoc201511.py  test_aoc201511.py
python/2015/12_jsabacusframework_io/: README.md  aoc201512.py  test_aoc201512.py
python/2015/13_knights_of_the_dinner_table/: README.md  aoc201513.py  test_aoc201513.py
python/2015/14_reindeer_olympics/: README.md  aoc201514_namedtuple.py  aoc201514_tuple.py  test_aoc201514.py
python/2015/15_science_for_hungry_people/: README.md  aoc201515.py  test_aoc201515.py
python/2015/16_aunt_sue/: README.md  aoc201516.py  example1.txt  test_aoc201516.py
python/2015/17_no_such_thing_as_too_much/: README.md  aoc201517.py  example1.txt  test_aoc201517.py
python/2015/18_like_a_gif_for_your_yard/: README.md  aoc201518.py  test_aoc201518.py
python/2015/19_medicine_for_rudolph/: README.md  aoc201519.py  test_aoc201519.py
python/2015/20_infinite_elves_and_infinite_houses/: README.md  aoc201520.py  aoc201520_numpy.py  (+3 more)
python/2016/: README.md
python/2017/: README.md
python/2018/: README.md
python/2019/: README.md
python/2020/: README.md
python/2021/: README.md
python/2022/: README.md
python/2023/: README.md
python/2024/: README.md
python/aoc/: intcode.py  test_intcode.py
python/src/: README.md
(+1999 files in other folders)
