[build-system]
requires      = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name         = "aoc"
version      = "0.0.1"
dependencies = []

[tool.setuptools]
packages = ["aoc"]

[tool.pytest.ini_options]
addopts             = "--doctest-modules --doctest-continue-on-failure"
doctest_optionflags = "NORMALIZE_WHITESPACE"

[tool.black]
target_version = ["py310"]


[tool.isort]
profile                   = "black"
known_first_party         = ["aoc"]
import_heading_firstparty = "Advent of Code imports"
