[build-system]
requires      = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name            = "aoc2019"
authors         = [{ name = "Geir Arne Hjelle", email = "geirarne@gmail.com" }]
classifiers     = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.8"
dynamic         = ["version", "description"]

[project.urls]
home-page = "https://github.com/gahjelle/advent_of_code"
